MGDCTRS-827: update the status of namespaces when there is a failure creating the resource on kubernetes
